--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@
 # docker compose up -d
 # Datenbank init, aktiviere volumes sql-init/ticket.sql - setzt die Daten immer zurück auf Testdaten 
 #
-name: Ticketsystem
+name: ticketsystem
+
 services:
   db:
     image: mariadb:latest
